App receieves and acknowledges a distress call for accident at a REST endpoint